# skillbox_cpp_all_modules

./: README.md
Module11/Task1/src/: main.cpp
Module11/Task2/lib/: framework.h  pch.cpp  pch.h  simplstrLibV2.cpp  simplstrLibV2.h  simplstrLibV2.lib
Module11/Task2/lib/simplstr/: simplstrLibV2.idb
Module11/Task2/src/: main.cpp
Module11/Task3/src/: main.cpp
Module12/task_1/src/: main.cpp
Module12/task_2/src/: main.cpp
Module12/task_3/src/: main.cpp
Module13/Notes from lectures/vector_first_usage/src/: main.cpp
Module13/Notes from lectures/vector_robots_task/src/: main.cpp
Module13/Notes from lectures/vector_second_task/: Makefile
Module13/Notes from lectures/vector_second_task/src/: main.cpp
Module13/task_1/src/: main.cpp
Module13/task_2/src/: main.cpp
Module13/task_3/src/: main.cpp
Module14/Task1/lib/: main.cpp
Module14/Task1/src/: main.cpp
Module14/Task2/src/: main.cpp
Module14/Task3/src/: main.cpp
Module14/Task4/src/: main.cpp
Module14/Task5/src/: main.cpp
Module15/HW/Task1/src/: main.cpp
Module15/HW/Task2/src/: main.cpp
Module15/HW/Task3/src/: main.cpp
Module15/HW/Task4/src/: main.cpp
Module15/Note1/src/: main.cpp
Module15/Note2/src/: main.cpp
Module15/Note3/src/: main.cpp
Module16/Task1/src/: main.cpp
Module16/Task2/src/: main.cpp
Module16/Task3/src/: main.cpp
Module16/Task4/src/: main.cpp
Module16/Task5/src/: main.cpp
Module17/: README.md
Module17/HW/Task1/src/: main.cpp
Module17/HW/Task2/src/: main.cpp
Module17/HW/Task3/src/: main.cpp
Module17/Lectures/Note1/src/: main.cpp
Module18/HW/Task1/src/: main.cpp
Module18/HW/Task2/src/: main.cpp
Module18/HW/Task3/src/: main.cpp
Module18/Lectures/Note1/src/: main.cpp
Module18/Lectures/Note2/src/: main.cpp
Module18/Lectures/Note3/src/: main.cpp
Module18/Lectures/Note4/src/: main.cpp
Module19/: bank.txt
Module19/HW/Task1/src/: main.cpp  words.txt
Module19/HW/Task2/: test.txt
Module19/HW/Task2/src/: main.cpp
Module19/HW/Task3/src/: list.txt  main.cpp
Module19/HW/Task4/src/: main.cpp  main.d  testFile1.txt
Module19/HW/Task5/src/: answers.txt  main.cpp  questions.txt
Module19/Lecture/Note1/src/: main.cpp
Module20/HW/Task1/src/: main.cpp
Module20/HW/Task2/src/: main.cpp  painting.txt
Module20/HW/Task3/src/: basket.txt  main.cpp  river.txt
Module20/HW/Task4/src/: main.cpp
Module20/Lecture/Note1/src/: example.txt  file.txt  main.cpp
Module20/Lecture/Note2/src/: main.cpp
Module20/Lecture/Note3/src/: main.cpp
Module20/Lecture/Note4/src/: buildings.txt  main.cpp
Module24/Notes/Note3/: .gitignore
Module25/HW/task_1/: CMakeLists.txt
Module25/HW/task_2/: CMakeLists.txt
Module26/HW/Task1/: CMakeLists.txt  main.cpp
Module26/HW/Task2/: main.cpp
Module26/HW/Task3/: CMakeLists.txt  main.cpp
Module26/Notes/Note1/: CMakeLists.txt  main.cpp
Module26/Notes/Note2/: CMakeLists.txt  main.cpp
Module27/HW/Task1/: main.cpp
Module27/HW/Task2/: CMakeLists.txt  main.cpp
Module27/Notes/Note1/: main.cpp
Module27/Notes/Note2/: main.cpp
Module28/HW/Task1/: main.cpp
Module28/HW/Task2/: main.cpp
Module28/HW/Task3/: main.cpp
Module29/HW/Task1/: main.cpp
Module29/Notes/Note1/: CMakeLists.txt  main.cpp
Module29/Notes/Note2/: main.cpp
Module30/HW/Task1/: CMakeLists.txt  main.cpp
Module30/HW/Task2/: CMakeLists.txt  main.cpp
Module30/HW/Task3/: CMakeLists.txt  main.cpp
Module30/Notes/FirstNote/: CMakeLists.txt  main.cpp
Module31/HW/Task1/: main.cpp
Module31/HW/Task2/: main.cpp
Module31/Notes/Note1/: main.cpp
Module31/Notes/Note2/: CMakeLists.txt  main.cpp
Module31/Notes/Note3/: CMakeLists.txt  main.cpp
Module32/: README.md
Module32/HW/Task1/: film.json
Module32/HW/Task2/: CMakeLists.txt  films.json  main.cpp
Module32/HW/Task3/: company.pb.cc  company.pb.h  company.proto  main.cpp
Module32/Notes/Note1/: CMakeLists.txt  main.cpp  record.json
Module32/Notes/Note2/: CMakeLists.txt  main.cpp  record.proto
Module33/HW/Task1/: CMakeLists.txt  main.cpp
Module33/HW/Task2/: CMakeLists.txt  main.cpp
Module33/HW/Task3/: CMakeLists.txt  main.cpp
Module33/HW/Task4/: CMakeLists.txt  main.cpp
Module33/Notes/Note3/: main.cpp
Module33/Notes/Note4/: CMakeLists.txt  main.cpp
Module33/Notes/Note5/: CMakeLists.txt  main.cpp
Module33/Notes/Note6/: CMakeLists.txt  main.cpp
Module35/HW/Task1/: CMakeLists.txt  main.cpp
Module35/HW/Task2/: CMakeLists.txt  main.cpp
Module35/HW/Task3/: CMakeLists.txt  main.cpp
Module35/Notes/Note1/: CMakeLists.txt  main.cpp
Module35/Notes/Note2/: CMakeLists.txt  main.cpp
Module36/HW/Task1_vol2/: .gitignore  CMakeLists.txt  main.cpp  mainwindow.cpp  mainwindow.h  resources.qrc
Module36/Notes/Note1/: CMakeLists.txt  main.cpp
Module36/Notes/Note2/: CMakeLists.txt  main.cpp
Module36/Notes/Note3/: CMakeLists.txt  main.cpp
Module36/Notes/Note4/: CMakeLists.txt  main.cpp
Module37/HW/Task1_vol2/: CMakeLists.txt  calculatorgui.ui  calculatormainwindow.h  main.cpp
Module37/HW/Task2_vol2/: CMakeLists.txt  Main.qml  main.cpp
Module37/HW/Task3/: CMakeLists.txt  main.cpp  mainwindow.h  remoteCtrl.ui
Module37/Notes/Note1_CLion/: CMakeLists.txt  caller.ui  callermainwindow.h  main.cpp
Module37/Notes/Note2/: CMakeLists.txt  Main.qml  main.cpp
Module38/HW/task_1/: CMakeLists.txt  resources.qrc
Module38/HW/task_1/headers/: soundButton.h
Module38/HW/task_1/src/: main.cpp  soundButton.cpp
Module38/HW/task_2/: CMakeLists.txt
Module38/HW/task_2/include/: mainwindow.h
Module38/HW/task_2/src/: main.cpp  mainwindow.cpp
Module38/HW/task_2/ui/: mainwindow.ui
Module38/HW/task_3/: CMakeLists.txt
Module38/HW/task_3/include/: mainwindow.h
Module38/HW/task_3/src/: mainwindow.cpp
Module38/Notes/Note1/: CMakeLists.txt  main.cpp
Module38/Notes/Note2/: CMakeLists.txt  main.cpp
Module38/Notes/Note3/: CMakeLists.txt  main.cpp
(+928 files in other folders)
